// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evaluateConditionalRule — operators > contains + missing parent value (snapshot for exact behavior) > contains-hit 1`] = `true`;

exports[`evaluateConditionalRule — operators > contains + missing parent value (snapshot for exact behavior) > missing-parent 1`] = `false`;

exports[`getFieldSchema / getRelevantFieldsForFormType > returns a schema for known type/formType combinations (snapshot) > BUSINESS-SHIFTED 1`] = `
[
  {
    "id": "customerName",
    "isRequired": true,
    "label": "Customer Name",
    "name": "customerName",
    "order": 1,
    "section": "Basic Information",
    "type": "text",
  },
  {
    "id": "metPersonName",
    "isRequired": false,
    "label": "Person Met",
    "name": "metPersonName",
    "order": 2,
    "section": "Basic Information",
    "type": "text",
  },
  {
    "id": "addressLocatable",
    "isRequired": false,
    "label": "Address Locatable",
    "name": "addressLocatable",
    "order": 1,
    "section": "Address Details",
    "type": "select",
  },
  {
    "id": "addressRating",
    "isRequired": false,
    "label": "Address Rating",
    "name": "addressRating",
    "order": 2,
    "section": "Address Details",
    "type": "select",
  },
  {
    "id": "locality",
    "isRequired": false,
    "label": "Locality",
    "name": "locality",
    "order": 3,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "politicalConnection",
    "isRequired": false,
    "label": "Political Connection",
    "name": "politicalConnection",
    "order": 1,
    "section": "Area Assessment",
    "type": "select",
  },
  {
    "id": "dominatedArea",
    "isRequired": false,
    "label": "Dominated Area",
    "name": "dominatedArea",
    "order": 2,
    "section": "Area Assessment",
    "type": "select",
  },
  {
    "id": "feedbackFromNeighbour",
    "isRequired": false,
    "label": "Feedback from Neighbour",
    "name": "feedbackFromNeighbour",
    "order": 3,
    "section": "Area Assessment",
    "type": "textarea",
  },
  {
    "id": "finalStatus",
    "isRequired": false,
    "label": "Final Status",
    "name": "finalStatus",
    "order": 1,
    "section": "Verification Outcome",
    "type": "select",
  },
  {
    "id": "callRemark",
    "isRequired": false,
    "label": "Call Remark",
    "name": "callRemark",
    "order": 2,
    "section": "Verification Outcome",
    "type": "textarea",
  },
  {
    "id": "landmark1",
    "isRequired": false,
    "label": "Landmark 1",
    "name": "landmark1",
    "order": 4,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "landmark2",
    "isRequired": false,
    "label": "Landmark 2",
    "name": "landmark2",
    "order": 5,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "landmark3",
    "isRequired": false,
    "label": "Landmark 3",
    "name": "landmark3",
    "order": 6,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "landmark4",
    "isRequired": false,
    "label": "Landmark 4",
    "name": "landmark4",
    "order": 7,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "addressStructure",
    "isRequired": false,
    "label": "Address Structure",
    "name": "addressStructure",
    "order": 8,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "otherObservation",
    "isRequired": false,
    "label": "Other Observations",
    "name": "otherObservation",
    "order": 4,
    "section": "Area Assessment",
    "type": "textarea",
  },
  {
    "id": "shiftedPeriod",
    "isRequired": false,
    "label": "Shifted Since",
    "name": "shiftedPeriod",
    "order": 1,
    "section": "Shifted Details",
    "type": "text",
  },
  {
    "id": "currentCompanyName",
    "isRequired": false,
    "label": "Current Company Name",
    "name": "currentCompanyName",
    "order": 2,
    "section": "Shifted Details",
    "type": "text",
  },
  {
    "id": "currentCompanyPeriod",
    "isRequired": false,
    "label": "Current Company Period",
    "name": "currentCompanyPeriod",
    "order": 3,
    "section": "Shifted Details",
    "type": "text",
  },
  {
    "id": "oldBusinessShiftedPeriod",
    "isRequired": false,
    "label": "Old Business Shifted Period",
    "name": "oldBusinessShiftedPeriod",
    "order": 4,
    "section": "Shifted Details",
    "type": "text",
  },
]
`;

exports[`getFieldSchema / getRelevantFieldsForFormType > returns a schema for known type/formType combinations (snapshot) > RESIDENCE-POSITIVE 1`] = `
[
  {
    "id": "customerName",
    "isRequired": true,
    "label": "Customer Name",
    "name": "customerName",
    "order": 1,
    "section": "Basic Information",
    "type": "text",
  },
  {
    "id": "metPersonName",
    "isRequired": false,
    "label": "Person Met",
    "name": "metPersonName",
    "order": 2,
    "section": "Basic Information",
    "type": "text",
  },
  {
    "id": "addressLocatable",
    "isRequired": false,
    "label": "Address Locatable",
    "name": "addressLocatable",
    "order": 1,
    "section": "Address Details",
    "type": "select",
  },
  {
    "id": "addressRating",
    "isRequired": false,
    "label": "Address Rating",
    "name": "addressRating",
    "order": 2,
    "section": "Address Details",
    "type": "select",
  },
  {
    "id": "locality",
    "isRequired": false,
    "label": "Locality",
    "name": "locality",
    "order": 3,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "politicalConnection",
    "isRequired": false,
    "label": "Political Connection",
    "name": "politicalConnection",
    "order": 1,
    "section": "Area Assessment",
    "type": "select",
  },
  {
    "id": "dominatedArea",
    "isRequired": false,
    "label": "Dominated Area",
    "name": "dominatedArea",
    "order": 2,
    "section": "Area Assessment",
    "type": "select",
  },
  {
    "id": "feedbackFromNeighbour",
    "isRequired": false,
    "label": "Feedback from Neighbour",
    "name": "feedbackFromNeighbour",
    "order": 3,
    "section": "Area Assessment",
    "type": "textarea",
  },
  {
    "id": "finalStatus",
    "isRequired": false,
    "label": "Final Status",
    "name": "finalStatus",
    "order": 1,
    "section": "Verification Outcome",
    "type": "select",
  },
  {
    "id": "callRemark",
    "isRequired": false,
    "label": "Call Remark",
    "name": "callRemark",
    "order": 2,
    "section": "Verification Outcome",
    "type": "textarea",
  },
  {
    "id": "landmark1",
    "isRequired": false,
    "label": "Landmark 1",
    "name": "landmark1",
    "order": 4,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "landmark2",
    "isRequired": false,
    "label": "Landmark 2",
    "name": "landmark2",
    "order": 5,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "landmark3",
    "isRequired": false,
    "label": "Landmark 3",
    "name": "landmark3",
    "order": 6,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "landmark4",
    "isRequired": false,
    "label": "Landmark 4",
    "name": "landmark4",
    "order": 7,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "addressStructure",
    "isRequired": false,
    "label": "Address Structure",
    "name": "addressStructure",
    "order": 8,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "otherObservation",
    "isRequired": false,
    "label": "Other Observations",
    "name": "otherObservation",
    "order": 4,
    "section": "Area Assessment",
    "type": "textarea",
  },
  {
    "id": "houseStatus",
    "isRequired": false,
    "label": "House Status",
    "name": "houseStatus",
    "order": 1,
    "section": "Residence Details",
    "type": "select",
  },
  {
    "id": "ownershipType",
    "isRequired": false,
    "label": "Ownership Type",
    "name": "ownershipType",
    "order": 2,
    "section": "Residence Details",
    "type": "select",
  },
  {
    "id": "stayingPeriod",
    "isRequired": false,
    "label": "Staying Period",
    "name": "stayingPeriod",
    "order": 3,
    "section": "Residence Details",
    "type": "text",
  },
  {
    "id": "totalFamilyMembers",
    "isRequired": false,
    "label": "Total Family Members",
    "name": "totalFamilyMembers",
    "order": 1,
    "section": "Family Details",
    "type": "number",
  },
  {
    "id": "totalEarningMember",
    "isRequired": false,
    "label": "Total Earning Members",
    "name": "totalEarningMember",
    "order": 2,
    "section": "Family Details",
    "type": "number",
  },
  {
    "id": "metPersonRelation",
    "isRequired": false,
    "label": "Relation with Applicant",
    "name": "metPersonRelation",
    "order": 4,
    "section": "Basic Information",
    "type": "text",
  },
  {
    "id": "door_status",
    "isRequired": false,
    "label": "Door Status",
    "name": "door_status",
    "order": 1,
    "section": "Premises Details",
    "type": "select",
  },
  {
    "id": "doorNamePlateStatus",
    "isRequired": false,
    "label": "Door Name Plate",
    "name": "doorNamePlateStatus",
    "order": 2,
    "section": "Premises Details",
    "type": "select",
  },
  {
    "id": "societyNamePlateStatus",
    "isRequired": false,
    "label": "Society Name Plate",
    "name": "societyNamePlateStatus",
    "order": 3,
    "section": "Premises Details",
    "type": "select",
  },
  {
    "id": "nameOnDoorPlate",
    "isRequired": false,
    "label": "Name on Door Plate",
    "name": "nameOnDoorPlate",
    "order": 4,
    "section": "Premises Details",
    "type": "text",
  },
  {
    "id": "nameOnSocietyBoard",
    "isRequired": false,
    "label": "Name on Society Board",
    "name": "nameOnSocietyBoard",
    "order": 5,
    "section": "Premises Details",
    "type": "text",
  },
]
`;

exports[`getFieldSchema / getRelevantFieldsForFormType > returns a schema for known type/formType combinations (snapshot) > RESIDENCE-UNTRACEABLE 1`] = `
[
  {
    "id": "customerName",
    "isRequired": true,
    "label": "Customer Name",
    "name": "customerName",
    "order": 1,
    "section": "Basic Information",
    "type": "text",
  },
  {
    "id": "metPersonName",
    "isRequired": false,
    "label": "Person Met",
    "name": "metPersonName",
    "order": 2,
    "section": "Basic Information",
    "type": "text",
  },
  {
    "id": "addressLocatable",
    "isRequired": false,
    "label": "Address Locatable",
    "name": "addressLocatable",
    "order": 1,
    "section": "Address Details",
    "type": "select",
  },
  {
    "id": "addressRating",
    "isRequired": false,
    "label": "Address Rating",
    "name": "addressRating",
    "order": 2,
    "section": "Address Details",
    "type": "select",
  },
  {
    "id": "locality",
    "isRequired": false,
    "label": "Locality",
    "name": "locality",
    "order": 3,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "politicalConnection",
    "isRequired": false,
    "label": "Political Connection",
    "name": "politicalConnection",
    "order": 1,
    "section": "Area Assessment",
    "type": "select",
  },
  {
    "id": "dominatedArea",
    "isRequired": false,
    "label": "Dominated Area",
    "name": "dominatedArea",
    "order": 2,
    "section": "Area Assessment",
    "type": "select",
  },
  {
    "id": "feedbackFromNeighbour",
    "isRequired": false,
    "label": "Feedback from Neighbour",
    "name": "feedbackFromNeighbour",
    "order": 3,
    "section": "Area Assessment",
    "type": "textarea",
  },
  {
    "id": "finalStatus",
    "isRequired": false,
    "label": "Final Status",
    "name": "finalStatus",
    "order": 1,
    "section": "Verification Outcome",
    "type": "select",
  },
  {
    "id": "callRemark",
    "isRequired": false,
    "label": "Call Remark",
    "name": "callRemark",
    "order": 2,
    "section": "Verification Outcome",
    "type": "textarea",
  },
  {
    "id": "landmark1",
    "isRequired": false,
    "label": "Landmark 1",
    "name": "landmark1",
    "order": 4,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "landmark2",
    "isRequired": false,
    "label": "Landmark 2",
    "name": "landmark2",
    "order": 5,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "landmark3",
    "isRequired": false,
    "label": "Landmark 3",
    "name": "landmark3",
    "order": 6,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "landmark4",
    "isRequired": false,
    "label": "Landmark 4",
    "name": "landmark4",
    "order": 7,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "addressStructure",
    "isRequired": false,
    "label": "Address Structure",
    "name": "addressStructure",
    "order": 8,
    "section": "Address Details",
    "type": "text",
  },
  {
    "id": "otherObservation",
    "isRequired": false,
    "label": "Other Observations",
    "name": "otherObservation",
    "order": 4,
    "section": "Area Assessment",
    "type": "textarea",
  },
]
`;

exports[`shouldShowField > is deterministic for a governed field (snapshot) > locked 1`] = `false`;

exports[`shouldShowField > is deterministic for a governed field (snapshot) > open 1`] = `true`;
